# xdbg-mcp

./: README.md  mcp.client.json.example  pyproject.toml
docs/: CTF_RE_WORKFLOW_zh-CN.md
src/xdbg_mcp/: __init__.py  __main__.py  server.py
src/xdbg_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
